
* GITHUB#14160: Adjusts the default HNSW search behavior so that filter optimized search is enabled
  when 60% or less of vectors pass the pre-filter. (Ben Chaplin, Ben Trent)

New Features
---------------------
* GITHUB#14097: Binary partitioning merge policy over float-valued vector field. (Mike Sokolov)

Improvements
---------------------

(No changes)

Optimizations
---------------------
* GITHUB#14011: Reduce allocation rate in HNSW concurrent merge. (Viliam Durina)
* GITHUB#14022: Optimize DFS marking of connected components in HNSW by reducing stack depth, improving performance and reducing allocations. (Viswanath Kuchibhotla)

Bug Fixes
---------------------
* GITHUB#14049: Randomize KNN codec params in RandomCodec. Fixes scalar quantization div-by-zero
  when all values are identical. (Mike Sokolov)

* GITHUB#14075: Remove duplicate and add missing entry on brazilian portuguese stopwords list. (Arthur Caccavo)

Other
---------------------
(No changes)

======================= Lucene 10.2.0 =======================

API Changes
---------------------
* GITHUB#14069: Added DocIdSetIterator#intoBitSet API to let implementations
  optimize loading doc IDs into a bit set. (Adrien Grand)

* GITHUB#14134: Added Bits#applyMask API to help apply live docs as a mask on a
  bit set of matches. (Adrien Grand)

* GITHUB#14209: Deprecate Operations.union(Automaton,Automaton) and 
  concatenate(Automaton,Automaton) in favor of the methods taking List.  (Robert Muir)

New Features
---------------------

* GITHUB#14084, GITHUB#13635, GITHUB#13634, GITHUB#14170: Adds new `SeededKnnVectorQuery` query.
  These queries allow for the vector search entry points to be initialized via a `seed` query. This follows
  the research provided via https://arxiv.org/abs/2307.16779. (Sean MacAvaney, Ben Trent).


Improvements
---------------------

* GITHUB#14079: Hunspell Dictionary now supports an option to tolerate REP rule count mismatches.
  (Robert Muir)